# Unify

./: .gitignore  README.md  centralized_train.py  fl_train_evd.py  pyproject.toml  tools.yml
custom_configs/: kitti_yolox.py  kitti_yolox_evd.py  nuimage_yolox.py  nuimage_yolox_evd.py
src/: yolox_evidential_head.py
utlis/: non_iid_partition.py  nuimage_2_coco.py  plot_clients.py  split_coco_to_clients.py
